objects/OneDrive_Objects__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>Base_Folder_Id__c</fullName>
        <description>GUID of Base Folder in Document Root on Sharepoint</description>
        <label>Base Folder Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Base_Folder_Identifier__c</fullName>
        <description>OneDrive folder id or name which we will used as root for all records of particular Object type.</description>
        <label>Base Folder Identifier</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Create_Nested_Folder__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Create Nested Folder</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Default_Folders__c</fullName>
        <label>Default Folders</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Object_Identifier__c</fullName>
        <description>Salesforce object name for which we want to enable OneDrive.</description>
        <label>Object Identifier</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_Object_Identifier__c</fullName>
        <label>Parent Object Identifier</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Record_Folder_Identifier__c</fullName>
        <description>It&apos;s the name of field which holds the folder name for record on OneDrive. It can be a formula field or any other Salesforce field.</description>
        <label>Record Folder Identifier</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>OneDrive Objects</label>
</CustomObject>